--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
     defaultConfig {
         applicationId "xh.formmodules"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -33,7 +33,7 @@ android {
     productFlavors {
         assembly {
             applicationIdSuffix ".assembly"
-            versionName "1.0.8"
+            versionName "1.0.9"
             versionCode 1
         }
         ykrpcb {
@@ -54,7 +54,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:26.1.0'
+//    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -69,7 +70,7 @@ dependencies {
     // explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex.rxjava2:rxjava:2.1.7'
     implementation('com.github.arimorty:floatingsearchview:2.1.1') {
-        exclude group: 'com.android.support', module: 'design'
+        exclude group: 'com.android.support'
     }
     implementation project(':formmodule')
     implementation project(':appupdate')
